agregado html y css base portfolio y skillset

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </button>
 
     <!-- HEADER -->
-    <header class="container-fluid">
+    <header>
       <img class="circle" src="./img/mi-foto.jpg" alt="Mi foto" />
       <h1>Leandro Berne</h1>
       <h2>Desarrollador FrontEnd</h2>
@@ -39,25 +39,130 @@
     <!-- NAVBAR -->
     <nav>
       <ul>
-        <li>Inicio</li>
-        <li>Portfolio</li>
-        <li>Skillset</li>
-        <li>Contacto</li>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#skillset">Skillset</a></li>
+        <li><a href="#contacto">Contacto</a></li>
       </ul>
     </nav>
 
     <!-- MAIN -->
-    <div id="portfolio" class="container-fluid">
+    <div id="portfolio">
       <div style="height: 50px"></div>
       <h1>PORTFOLIO</h1>
+      <div id="card-container" class="container my-5 d-grid gap-5">
+        <div class="card" style="width: 18rem">
+          <img src="..." class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem">
+          <img src="..." class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem">
+          <img src="..." class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem">
+          <img src="..." class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem">
+          <img src="..." class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem">
+          <img src="..." class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <div id="skillset" class="container-fluid">
+    <div id="skillset">
       <div style="height: 50px"></div>
       <h1>SKILLSET</h1>
+      <div id="skills-container">
+        <div>
+          <img
+            src="./img/svg/react.svg"
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            title="Tooltip on top"
+          />
+        </div>
+        <div>
+          <img
+            src="./img/svg/react.svg"
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            title="Tooltip on top"
+          />
+          <span class="tooltip">HTML</span>
+        </div>
+        <div>
+          <img src="./img/svg/react.svg" /> <span class="tooltip">HTML</span>
+        </div>
+        <div>
+          <img src="./img/svg/react.svg" /> <span class="tooltip">HTML</span>
+        </div>
+        <div>
+          <img src="./img/svg/react.svg" /> <span class="tooltip">HTML</span>
+        </div>
+        <div>
+          <img src="./img/svg/react.svg" /> <span class="tooltip">HTML</span>
+        </div>
+        <div>
+          <img src="./img/svg/react.svg" /> <span class="tooltip">HTML</span>
+        </div>
+        <div>
+          <img src="./img/svg/react.svg" /> <span class="tooltip">HTML</span>
+        </div>
+      </div>
     </div>
 
-    <div id="contacto" class="container-fluid">
+    <div id="contacto">
       <div style="height: 50px"></div>
       <h1>CONTACTO</h1>
     </div>
