--- a/index.html
+++ b/index.html
@@ -126,10 +126,26 @@
       <div id="skills-container">
         <div>
           <img
-            src="./img/svg/react.svg"
+            src="./img/svg/html.svg"
             data-bs-toggle="tooltip"
             data-bs-placement="top"
-            title="Tooltip on top"
+            title="HTML"
+          />
+        </div>
+        <div>
+          <img
+            src="./img/svg/css.svg"
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            title="CSS"
+          />
+        </div>
+        <div>
+          <img
+            src="./img/svg/js.svg"
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            title="JavaScript"
           />
         </div>
         <div>
@@ -137,27 +153,40 @@
             src="./img/svg/react.svg"
             data-bs-toggle="tooltip"
             data-bs-placement="top"
-            title="Tooltip on top"
+            title="React JS"
           />
-          <span class="tooltip">HTML</span>
         </div>
         <div>
-          <img src="./img/svg/react.svg" /> <span class="tooltip">HTML</span>
+          <img
+            src="./img/svg/npm.svg"
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            title="NPM"
+          />
         </div>
         <div>
-          <img src="./img/svg/react.svg" /> <span class="tooltip">HTML</span>
+          <img
+            src="./img/svg/git.svg"
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            title="GIT"
+          />
         </div>
         <div>
-          <img src="./img/svg/react.svg" /> <span class="tooltip">HTML</span>
+          <img
+            src="./img/svg/bootstrap.svg"
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            title="Bootstrap"
+          />
         </div>
         <div>
-          <img src="./img/svg/react.svg" /> <span class="tooltip">HTML</span>
-        </div>
-        <div>
-          <img src="./img/svg/react.svg" /> <span class="tooltip">HTML</span>
-        </div>
-        <div>
-          <img src="./img/svg/react.svg" /> <span class="tooltip">HTML</span>
+          <img
+            src="./img/svg/sass.svg"
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            title="Sass"
+          />
         </div>
       </div>
     </div>
