Agregado Contactos, svgs y cv

--- a/index.html
+++ b/index.html
@@ -194,6 +194,46 @@
     <div id="contacto">
       <div style="height: 50px"></div>
       <h1>CONTACTO</h1>
+      <div id="contacto-container">
+        <div>
+          <a href="https://www.linkedin.com/in/leandro-berne/">
+            <img
+              src="./img/svg/linkedin.svg"
+              data-bs-toggle="tooltip"
+              data-bs-placement="top"
+              title="Linkedin"
+            />
+          </a>
+        </div>
+        <div>
+          <a href="mailto:leandro@plw.com.ar">
+            <img
+              src="./img/svg/mail.svg"
+              data-bs-toggle="tooltip"
+              data-bs-placement="top"
+              title="E-mail"
+            />
+          </a>
+        </div>
+        <div>
+          <a href="https://github.com/leandroberne/">
+            <img
+              src="./img/svg/github.svg"
+              data-bs-toggle="tooltip"
+              data-bs-placement="top"
+              title="Github"
+            />
+          </a>
+        </div>
+        <div>
+          <img
+            src="./img/svg/cv.svg"
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            title="Curriculum Vitae"
+          />
+        </div>
+      </div>
     </div>
 
     <!-- SCRIPT -->
