Agregado enlaces Contacto

--- a/index.html
+++ b/index.html
@@ -226,12 +226,16 @@
           </a>
         </div>
         <div>
-          <img
-            src="./img/svg/cv.svg"
-            data-bs-toggle="tooltip"
-            data-bs-placement="top"
-            title="Curriculum Vitae"
-          />
+          <a
+            href="https://leandroberne.github.io/portfolio/CV-Leandro_Berne.pdf"
+          >
+            <img
+              src="./img/svg/cv.svg"
+              data-bs-toggle="tooltip"
+              data-bs-placement="top"
+              title="Curriculum Vitae"
+            />
+          </a>
         </div>
       </div>
     </div>
