modificada seccion portfolio

--- a/index.html
+++ b/index.html
@@ -52,14 +52,22 @@
       <h1>PORTFOLIO</h1>
       <div id="card-container" class="container my-5 d-grid gap-5">
         <div class="card" style="width: 18rem">
-          <img src="..." class="card-img-top" alt="..." />
+          <img
+            src="./img/afa.jpg"
+            class="card-img-top"
+            alt="Imagen de AFA Tienda Oficial"
+          />
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">AFA Tienda Oficial</h5>
+            <p class="card-text">E-Commerce creado en React JS.</p>
+            <a href="https://react-afa-app.netlify.app/" class="btn btn-primary"
+              >Sitio web</a
+            >
+            <a
+              href="https://github.com/leandroberne/react-afa-app"
+              class="btn btn-secondary"
+              >Repositorio</a
+            >
           </div>
         </div>
         <div class="card" style="width: 18rem">
