Agregado GOT App

--- a/index.html
+++ b/index.html
@@ -71,58 +71,100 @@
           </div>
         </div>
         <div class="card" style="width: 18rem">
-          <img src="..." class="card-img-top" alt="..." />
+          <img
+            src="./img/got.jpg"
+            class="card-img-top"
+            alt="Imagen de GOT App"
+          />
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">GOT App</h5>
+            <p class="card-text">Galeria creada en React JS</p>
+            <a
+              href="https://leandroberne-react-got-app.netlify.app/"
+              class="btn btn-primary"
+              >Sitio web</a
+            >
+            <a
+              href="https://github.com/leandroberne/react-got-app"
+              class="btn btn-secondary"
+              >Repositorio</a
+            >
           </div>
         </div>
         <div class="card" style="width: 18rem">
-          <img src="..." class="card-img-top" alt="..." />
+          <img
+            src="./img/afa.jpg"
+            class="card-img-top"
+            alt="Imagen de AFA Tienda Oficial"
+          />
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">AFA Tienda Oficial</h5>
+            <p class="card-text">E-Commerce creado en React JS.</p>
+            <a href="https://react-afa-app.netlify.app/" class="btn btn-primary"
+              >Sitio web</a
+            >
+            <a
+              href="https://github.com/leandroberne/react-afa-app"
+              class="btn btn-secondary"
+              >Repositorio</a
+            >
           </div>
         </div>
         <div class="card" style="width: 18rem">
-          <img src="..." class="card-img-top" alt="..." />
+          <img
+            src="./img/afa.jpg"
+            class="card-img-top"
+            alt="Imagen de AFA Tienda Oficial"
+          />
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">AFA Tienda Oficial</h5>
+            <p class="card-text">E-Commerce creado en React JS.</p>
+            <a href="https://react-afa-app.netlify.app/" class="btn btn-primary"
+              >Sitio web</a
+            >
+            <a
+              href="https://github.com/leandroberne/react-afa-app"
+              class="btn btn-secondary"
+              >Repositorio</a
+            >
           </div>
         </div>
         <div class="card" style="width: 18rem">
-          <img src="..." class="card-img-top" alt="..." />
+          <img
+            src="./img/afa.jpg"
+            class="card-img-top"
+            alt="Imagen de AFA Tienda Oficial"
+          />
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">AFA Tienda Oficial</h5>
+            <p class="card-text">E-Commerce creado en React JS.</p>
+            <a href="https://react-afa-app.netlify.app/" class="btn btn-primary"
+              >Sitio web</a
+            >
+            <a
+              href="https://github.com/leandroberne/react-afa-app"
+              class="btn btn-secondary"
+              >Repositorio</a
+            >
           </div>
         </div>
         <div class="card" style="width: 18rem">
-          <img src="..." class="card-img-top" alt="..." />
+          <img
+            src="./img/afa.jpg"
+            class="card-img-top"
+            alt="Imagen de AFA Tienda Oficial"
+          />
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">AFA Tienda Oficial</h5>
+            <p class="card-text">E-Commerce creado en React JS.</p>
+            <a href="https://react-afa-app.netlify.app/" class="btn btn-primary"
+              >Sitio web</a
+            >
+            <a
+              href="https://github.com/leandroberne/react-afa-app"
+              class="btn btn-secondary"
+              >Repositorio</a
+            >
           </div>
         </div>
       </div>
