--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           />
           <div class="card-body">
             <h5 class="card-title">GOT App</h5>
-            <p class="card-text">Galeria creada en React JS</p>
+            <p class="card-text">Galeria creada en React JS.</p>
             <a
               href="https://leandroberne-react-got-app.netlify.app/"
               class="btn btn-primary"
@@ -93,18 +93,20 @@
         </div>
         <div class="card" style="width: 18rem">
           <img
-            src="./img/afa.jpg"
+            src="./img/tokyobar.jpg"
             class="card-img-top"
-            alt="Imagen de AFA Tienda Oficial"
+            alt="Imagen de tokyoBAR"
           />
           <div class="card-body">
-            <h5 class="card-title">AFA Tienda Oficial</h5>
-            <p class="card-text">E-Commerce creado en React JS.</p>
-            <a href="https://react-afa-app.netlify.app/" class="btn btn-primary"
+            <h5 class="card-title">tokyoBAR</h5>
+            <p class="card-text">Sitio web creado con HTML/CSS/JS.</p>
+            <a
+              href="https://leandroberne.github.io/tokyobar/"
+              class="btn btn-primary"
               >Sitio web</a
             >
             <a
-              href="https://github.com/leandroberne/react-afa-app"
+              href="https://github.com/leandroberne/tokyobar"
               class="btn btn-secondary"
               >Repositorio</a
             >
