Agregado Sailor Express al Portfolio

--- a/index.html
+++ b/index.html
@@ -114,18 +114,20 @@
         </div>
         <div class="card" style="width: 18rem">
           <img
-            src="./img/afa.jpg"
+            src="./img/sailor-express.jpg"
             class="card-img-top"
-            alt="Imagen de AFA Tienda Oficial"
+            alt="Imagen de Sailor Express"
           />
           <div class="card-body">
-            <h5 class="card-title">AFA Tienda Oficial</h5>
-            <p class="card-text">E-Commerce creado en React JS.</p>
-            <a href="https://react-afa-app.netlify.app/" class="btn btn-primary"
+            <h5 class="card-title">Sailor Express</h5>
+            <p class="card-text">E-Commerce creado en JavaScript.</p>
+            <a
+              href="https://leandroberne.github.io/sailor-express/"
+              class="btn btn-primary"
               >Sitio web</a
             >
             <a
-              href="https://github.com/leandroberne/react-afa-app"
+              href="https://github.com/leandroberne/sailor-express"
               class="btn btn-secondary"
               >Repositorio</a
             >
