--- a/index.html
+++ b/index.html
@@ -135,18 +135,20 @@
         </div>
         <div class="card" style="width: 18rem">
           <img
-            src="./img/afa.jpg"
+            src="./img/aenima.jpg"
             class="card-img-top"
-            alt="Imagen de AFA Tienda Oficial"
+            alt="Imagen de Challenge Viajes"
           />
           <div class="card-body">
-            <h5 class="card-title">AFA Tienda Oficial</h5>
-            <p class="card-text">E-Commerce creado en React JS.</p>
-            <a href="https://react-afa-app.netlify.app/" class="btn btn-primary"
+            <h5 class="card-title">Challenge Viajes</h5>
+            <p class="card-text">Landing page responsive HTML/CSS/JS.</p>
+            <a
+              href="https://leandroberne.github.io/aenima/"
+              class="btn btn-primary"
               >Sitio web</a
             >
             <a
-              href="https://github.com/leandroberne/react-afa-app"
+              href="https://github.com/leandroberne/aenima"
               class="btn btn-secondary"
               >Repositorio</a
             >
