--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           />
           <div class="card-body">
             <h5 class="card-title">Challenge Viajes</h5>
-            <p class="card-text">Landing page responsive HTML/CSS/JS.</p>
+            <p class="card-text">Landing responsive HTML/CSS/JS.</p>
             <a
               href="https://leandroberne.github.io/aenima/"
               class="btn btn-primary"
