Agregado CryptoApp y update CV

--- a/index.html
+++ b/index.html
@@ -156,18 +156,20 @@
         </div>
         <div class="card" style="width: 18rem">
           <img
-            src="./img/afa.jpg"
+            src="./img/cryptoapp.jpg"
             class="card-img-top"
             alt="Imagen de AFA Tienda Oficial"
           />
           <div class="card-body">
-            <h5 class="card-title">AFA Tienda Oficial</h5>
-            <p class="card-text">E-Commerce creado en React JS.</p>
-            <a href="https://react-afa-app.netlify.app/" class="btn btn-primary"
+            <h5 class="card-title">Crypto App</h5>
+            <p class="card-text">Conversor de moneda a cripto.</p>
+            <a
+              href="https://leandroberne-crypto-app.netlify.app/"
+              class="btn btn-primary"
               >Sitio web</a
             >
             <a
-              href="https://github.com/leandroberne/react-afa-app"
+              href="https://github.com/leandroberne/crypto-app"
               class="btn btn-secondary"
               >Repositorio</a
             >
